# invoiceCreator

./: .gitignore  Install Invoice Creator.bat  Launch Invoice Creator.bat  MANIFEST.in  README.md  pyproject.toml  streamlit_app.py
alternate_dist/: Launch Invoice Creator.pyw  Launch Invoice Creator.vbs  requirements.txt
data/: 29.04.2026.xlsx
invoice_creator/: __main__.py  app.py  app_info.py  desktop_launcher.py
invoice_creator/importers/: excel.py
invoice_creator/mapping/: engine.py
invoice_creator/models/: generation_job.py  invoice.py  invoice_profile.py
invoice_creator/pdf/: table_writer.py  test_script.py  text.py  text_writer.py  writer.py
invoice_creator/services/: app_paths.py  generation_service.py  invoice_service.py  logging_service.py  profile_loader.py  settings_service.py  validation_service.py  zip_service.py
invoice_creator/templates/: invoice_profiles.json  mapping_rules.json
invoice_creator/templates/shared/: table_metadata.json  template_fields.json
invoice_creator/ui/: state.py  style.py  styles.py  system_actions.py
invoice_creator/ui/tabs/: generate.py  layout.py  mapping.py  review.py  upload.py
invoice_creator/utils/: build_invoice_data.py  build_table_meta.py  build_template_fields.py  meta_extraction.py
packaging/: InvoiceCreator.iss  RELEASE_GUIDE.md  build.py  desktop_launcher.py  invoice_creator.spec
release/InvoiceCreator-v1.0.0/: README.txt
templates/: mapping.json  table_metadata.json  template_fields.json  template_metadata.json
tools/: build_release.py
