[project]
name = "invoicecreator"
version = "0.1.0"
description = "Lightweight Streamlit app for generating invoice PDFs from an Excel workbook"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.37",
    "pandas>=2.2,<3",
    "openpyxl>=3.1",
    "pymupdf>=1.24",
    "fitz>=0.0.1.dev2",
    "numpy>=1.26,<2.3",
]

[project.scripts]
invoicecreator = "main:main"
