[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoicecreator"
version = "1.1.0"
description = "Lightweight Streamlit app for generating invoice PDFs from an Excel workbook"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit==1.59.2",
    "pandas>=2.2,<3",
    "openpyxl>=3.1",
    "numpy>=1.26,<2.3",
    "pymupdf>=1.28.0",
]

[project.gui-scripts]
invoicecreator = "invoice_creator.desktop_launcher:main"

[tool.setuptools.packages.find]
include = ["invoice_creator*"]

[tool.setuptools.package-data]
invoice_creator = [
    "templates/**/*",
    "data/**/*",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]